# cua-touch

./: AGENTS.md  PLAN-REFERENCE.md  README.md  anti-learn.md  api.md  architecture.md  banned.md  benchmarks.md  brain.md  changelog.md  commands.md  contributing.md  cua_touch.py  design.md  faq.md  fix.md  goal.md  graph-report.md  graphify.md  history.md  infisical.md  issues.md  learn.md  opencode.md  plan.md  pyproject.toml  registry-actuation.md  registry-credentials.md  registry-google.md  registry-graphify.md  registry-macos.md  registry-perception.md  registry-skills.md  registry-surveys.md  registry.md  roadmap.md  security.md  sinrules.md  state.md  successful.md  (+6 more)
.github/workflows/: ci.yml
cua_touch/: __init__.py
tests/: test_cua_touch.py
