[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cua-touch"
version = "0.1.0"
description = "Python client for cua-driver daemon — macOS AX tree popup automation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "SIN-CLIs", email = "contact@sin-clis.dev"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["cua_touch"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"